--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.1.0",
+    "css-loader": "^3.5.3",
     "html-webpack-plugin": "^4.2.0",
     "jest": "^25.5.0",
     "redux-devtools": "^3.5.0",
+    "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
