--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --mode development --open --hot",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "test": "jest"
   },
   "author": "MaryVol",
   "license": "ISC",
@@ -20,6 +21,7 @@
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.2.0",
     "jest": "^25.5.0",
+    "react-test-renderer": "^16.13.1",
     "redux-devtools": "^3.5.0",
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
