--- a/package.json
+++ b/package.json
@@ -8,32 +8,41 @@
     "build": "webpack --mode production",
     "test": "jest"
   },
+  "jest": {
+    "moduleNameMapper": {
+      "*.css": "identity-obj-proxy"
+    }
+  },
   "author": "MaryVol",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
+    "@testing-library/react": "^10.2.1",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.5.3",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.2.0",
-    "jest": "^25.5.0",
+    "jest": "^25.5.4",
     "react-test-renderer": "^16.13.1",
     "redux-devtools": "^3.5.0",
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "identity-obj-proxy": "^3.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "save-dev": "0.0.1-security"
   }
 }
