--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.2.0",
     "jest": "^25.5.4",
+    "jest-dom": "^4.0.0",
     "react-test-renderer": "^16.13.1",
     "redux-devtools": "^3.5.0",
     "style-loader": "^1.2.1",
