--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "jest": {
     "moduleNameMapper": {
-      "*.css": "identity-obj-proxy"
+      "\\.(css|less)$": "identity-obj-proxy"
     }
   },
   "author": "MaryVol",
@@ -36,11 +36,12 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "core-js": "^3.6.5",
     "identity-obj-proxy": "^3.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-redux": "^7.2.0",
+    "react-redux": "^6.0.1",
     "react-router": "^5.1.2",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
