--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-webpack",
   "version": "1.0.0",
-  "description": "",
+  "description": "React application, movie site",
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --mode development --open --hot",
@@ -39,6 +39,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^5.10.1",
     "core-js": "^3.6.5",
     "identity-obj-proxy": "^3.0.0",
