--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-router": "^5.1.2",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "save-dev": "0.0.1-security"
   }
 }
