--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^5.10.1",
+    "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "identity-obj-proxy": "^3.0.0",
     "jquery": "^3.5.1",
