--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "qs": "^6.9.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-promise-tracker": "^2.1.0",
     "react-redux": "^6.0.1",
     "react-router": "^5.1.2",
     "redux": "^4.0.5",
