--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "React application, movie site",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --mode development --open --hot",
+    "start": "webpack-dev-server --mode development --open --hot --history-api-fallback",
     "build": "webpack --mode production",
     "test": "jest"
   },
