--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "jquery": "^3.5.1",
     "prop-types": "^15.7.2",
     "qs": "^6.9.4",
+    "querystring": "^0.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-promise-tracker": "^2.1.0",
