--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "React application, movie site",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --mode development --open --hot",
-    "build": "webpack --mode production",
-    "test": "jest"
+    "test": "jest",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "jest": {
     "moduleNameMapper": {
@@ -43,9 +44,10 @@
     "@testing-library/jest-dom": "^5.10.1",
     "core-js": "^3.6.5",
     "identity-obj-proxy": "^3.0.0",
+    "next": "^10.0.0",
     "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-redux": "^6.0.1",
     "react-router": "^5.1.2",
     "redux": "^4.0.5",
